<package>
  <!-- Package Metadata -->
  <name>utils</name>
  <maintainer email="you@example.com">Your Name</maintainer>
  <description>
    A ROS tutorial on modularity.
  </description>
  <version>0.0.0</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
